--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-model_path: "models/best.pt"
-source: 'example.jpg'
-save_dir: "results"  
-device: "cpu"  
-img_size: 640 
-conf_threshold: 0.5 
-iou_threshold: 0.5  
+model_path: "models/best.engine"  # TensorRT engine file
+source: 0  # Webcam or video file path
+save_dir: "results"  # Output folder
+device: "cuda"  # Ensure CUDA is available
+img_size: 640  # Image size for inference
+conf_threshold: 0.5  # Confidence threshold
+iou_threshold: 0.5  # IOU threshold for NMS
