--- a/aws_config.yaml
+++ b/aws_config.yaml
@@ -1,13 +1,14 @@
-# AWS Configuration for ANPR Project on Jetson Nano
-# Replace the placeholder values with your actual AWS credentials and resource names.
+# aws_config.yaml - THIS IS WHERE YOUR SECRETS GO
+aws_region: "xx"  # Changed from s3_region
+s3_bucket: "xx"
 
-# AWS Region (e.g., us-east-1, ap-south-1)
-s3_region: "your-aws-region-here"
+# AWS CREDENTIALS (FROM IAM USER)
+aws_access_key_id: "xx"      # ← YOUR SECRET HERE
+aws_secret_access_key: "xx"  # ← YOUR SECRET HERE
 
-# S3 Bucket name for storing detected plate images
-s3_bucket: "your-unique-bucket-name-here"
-
-# RDS Database Configuration
-rds_host: "your-database-instance.xxxxxxxxxxxx.region.rds.amazonaws.com"
-rds_user: "your_database_username"
-rds_password: "your_secure_database_password"
+# RDS Database
+rds_host: "xx"
+rds_database: "xx"
+rds_user: "xx"
+rds_password: "xx"        # ← ANOTHER SECRET HERE
+rds_port: xx
